src/objects/Group__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Billable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayName__c</fullName>
        <formula>text(Module__c) &amp; &quot;: &quot; &amp;  Topic__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DisplayName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <picklist>
            <picklistValues>
                <fullName>APICHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackbird Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal and Addictive Thinking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Literacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Homes Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inreach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interactive Journaling - Changing Courses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Men&apos;s Process Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYC ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orientation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pathways to Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prosocial Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seeking Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCU: Building Social Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCU: Common Sense Ideas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCU: Getting Motivated to Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCU: Ideas For Better Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCU: Understanding and Reducing Angry Feelings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCU: Unlock Your Thinking, Open your Mind</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>DisplayName__c</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Billable__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GRP-{0}</displayFormat>
        <label>Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>